As a user I can view my transaction history ID #6 [Delivers #6]
