# routes/transactions.js
@@ -6,10 +6,40 @@ const sessionModel = require('../models/Session');
 const userModel = require('../models/User');
 const bankModel = require('../models/Bank');
 const fs = require('fs');
-const axios = require('axios'); const jose = require('node-jose');
+const axios = require('axios');
+const jose = require('node-jose');
 const fetch = require('node-fetch');
 
 require('dotenv').config();
+
+router.get('/', verifyToken, async(req, res) => {
+    try {
+// Get a specific users session token
+        const sessionId = req.headers.authorization.split(' ')[1]
+
+        // Find a session with the provided Id
+        const session = await sessionModel.findOne({ _id: sessionId });
+
+        // Find the account associated with the user
+        const accountId = await accountModel.findOne({user: session.userId});
+        console.log(accountId.accountNumber);
+        // Find all transactions
+        const sentTransaction = await transactionModel.find({ userId: accountId.user })
+
+        const receivedTransaction = await transactionModel.find({accountTo: accountId.accountNumber});
+
+        if (!sentTransaction || !receivedTransaction) {
+            res.status(404).json({ error: "You have no logged transactions" });
+        }
+        console.log("Displaying transactions")
+        res.status(200).json({
+            transactions: sentTransaction,
+            received: receivedTransaction
+        });
+    } catch (e) {
+        return res.status(400).json({error: "error"})
+    }
+})
 
 router.post('/', verifyToken, async(req, res, next) => {
     let banks = [],
